--- a/tutorials/get-started-containers-docker/index.mdx
+++ b/tutorials/get-started-containers-docker/index.mdx
@@ -9,8 +9,8 @@ tags: Kubernetes k8s containers containerization Docker Dockerfile
 categories:
   - compute
 dates:
-  validation: 2022-03-09
-  posted: 2022-03-09
+  validation: 2022-03-28
+  posted: 2022-03-28
 ---
 
 This is the first in a series of tutorials accompanying our [video demonstrations on getting started with Kubernetes](TODO-LINK). In this first tutorial, we focus on one of the fundamental concepts behind Kubernetes: the [container](/compute/containers/concepts/#container). We use the popular containerization platform [Docker](https://www.docker.com/) to create and deploy a simple containerized "Hello World" application, before moving on to look at a slightly more complex application example. We finish by pushing the container images we have created to the Scaleway [Container Registry](/compute/container-registry/concepts/#container-registry). Future videos and tutorials in this series will show you how to then deploy your containerized application with Kubernetes, specifically with the Scaleway [Kubernetes Kapsule](/compute/kubernetes/concepts/#kubernetes-kapsule).
@@ -44,7 +44,7 @@ There are many advantages to building and deploying applications in this way. He
 - **Agility**: With containerization, development and delivery is faster, more agile and more flexible.
 - **Scalability**: Kubernetes is ideal for quickly scaling your application deployment up or down adding and removing containers depending on the need.
 - **Reliability**: Kubernetes keeps containerized workloads up and running at all times
-And encompassing all of the above...
+And encompassing all of the above:
 - **Cloud Native**: Building apps for Kubernetes mean embracing Cloud-native design: the building and running of scalable applications in modern, dynamic Cloud environments.
 
 To learn more about containers, Docker and Kubernetes, check out the [useful links](#useful-links) at the end of this tutorial.
@@ -95,7 +95,7 @@ The following steps show how to install Docker on an Ubuntu Linux operating syst
     sudo apt-get install docker-ce
     ```
 
-8. Check Docker is installed:
+8. Check that Docker is installed:
 
     ```
     docker -v
@@ -117,7 +117,7 @@ We show two examples of making containerized applications with Docker and take y
 
 ### Example 1 - a simple Hello World app
 
-We start by creating an extremely simple, one-line Python application that prints "Hello World" to the command line, then show how to use Docker to containerize this application.
+We start by creating a simple, one-line Python application that prints "Hello World" to the command line, then show how to use Docker to containerize this application.
 
 1. Create a folder called `myfirstapp` and navigate into it:
 
@@ -137,7 +137,7 @@ We start by creating an extremely simple, one-line Python application that print
   print("Hello World")
   ```
 
-4. Create the Dockerfile. This is a text file which gives instructions for building the Docker image for the application. Create it in the same directory as `myapp.py` with the following command
+4. Create the Dockerfile. This is a text file that gives instructions for building the Docker image for the application. Create it in the same directory as `myapp.py` with the following command
 
   ```bash
   nano Dockerfile
@@ -163,7 +163,7 @@ We start by creating an extremely simple, one-line Python application that print
 
   The `-t mytestapp` argument tells Docker to **tag** the image with the name **mytestapp. The `.` at the end of the command tells Docker to use the current directory as build context.
 
-7. Run the following command to run the image. This tells Docker to instanciate and execute the image, launching a container instance of our application:
+7. Run the following command to run the image. This tells Docker to instantiate and execute the image, launching a container instance of our application:
 
   ```
   sudo docker run mytestapp
@@ -291,7 +291,7 @@ You have seen how to containerize an application by creating a Dockerfile, using
 
 ## Useful links
 
-- [Getting started with Kubernetes: Part 1 - Containers & Docker [VIDEO TUTORIAL]](TODO LINK)
+- [Video tutorial: Getting started with Kubernetes: Part 1 - Containers & Docker](https://www.youtube.com/watch?v=zgxcCcKnXR0)
 - [Kubernetes Concepts](https://www.scaleway.com/en/docs/compute/kubernetes/concepts/)
 - [Introduction to Kubernetes](https://www.scaleway.com/en/docs/compute/kubernetes/reference-content/introduction-to-kubernetes/)
 - [What is a container? [Docker documentation]](https://www.docker.com/resources/what-container)
