--- a/compute/gpu/how-to/create-manage-gpu-instance.mdx
+++ b/compute/gpu/how-to/create-manage-gpu-instance.mdx
@@ -10,7 +10,7 @@ dates:
   posted: 2022-03-25
 ---
 
-Scaleway GPU Instances are virtual compute instances equipped with dedicated high-end Nvidia graphical processing unit (GPUs). They are ideal for data processing, artificial intelligence, rendering and video encoding. After you have created your GPU Instance, you can [connect to it via SSH](/compute/instances/how-to/connect-to-instance) and run one of our ready-made [Docker images](/compute/gpu/how-to/use-gpu-with-docker) to access a [preinstalled environment](/compute/gpu/how-to/use-preisntalled-env) environment with all your [favorite AI libraries and tools](/compute/gpu/reference-content/docker-images/) pre-installed. In addition to this, GPU Instances have all the features of our regular Instances, including [flexible IPs](/compute/instances/how-to/use-flexips/), [Security Groups](/compute/instances/how-to/use-security-groups/), [Private Networks](/compute/instances/how-to/use-private-networks/), [backups](/compute/instances/how-to/create-a-backup/) and more. When you are done using your GPU Instance, you can easily [delete it](/compute/instances/how-to/delete-instance/) from the Scaleway console.
+Scaleway GPU Instances are virtual compute instances equipped with dedicated high-end Nvidia graphical processing unit (GPUs). They are ideal for data processing, artificial intelligence, rendering and video encoding. After you have created your GPU Instance, you can [connect to it via SSH](/compute/instances/how-to/connect-to-instance) and run one of our ready-made [Docker images](/compute/gpu/how-to/use-gpu-with-docker) to access a [preinstalled environment](/compute/gpu/how-to/use-preisntalled-env) environment with all your [favorite AI libraries and tools](/compute/gpu/reference-content/docker-images/) already installed. In addition to this, GPU Instances have all the features of our regular Instances, including [flexible IPs](/compute/instances/how-to/use-flexips/), [Security Groups](/compute/instances/how-to/use-security-groups/), [Private Networks](/compute/instances/how-to/use-private-networks/), [backups](/compute/instances/how-to/create-a-backup/) and more. When you are done using your GPU Instance, you can easily [delete it](/compute/instances/how-to/delete-instance/) from the Scaleway console.
 
 <Message type="requirement">
 
@@ -45,7 +45,7 @@ Scaleway GPU Instances are virtual compute instances equipped with dedicated hig
 
 See our documentation on [how to connect to your Instance via SSH](/compute/instances/how-to/connect-to-instance/).
 
-Once you have connected via SSH, you can [launch a Docker container](/compute/instances/how-to/use-gpu-with-docker/) or [use a pre-installed python environment](/compute/instances/how-to/use-pipenv/) to start working on your AI projects.
+Once you have connected via SSH, you can [launch a Docker container](/compute/instances/how-to/use-gpu-with-docker/) to start working on your AI projects.
 
 ## How to use Instance features
 
