--- a/compute/gpu/how-to/use-gpu-with-docker.mdx
+++ b/compute/gpu/how-to/use-gpu-with-docker.mdx
@@ -10,15 +10,11 @@ dates:
   posted: 2022-03-25
 ---
 
-Docker is a platform as a service (PaaS) tool, that uses OS-level virtualization to deliver software in packages called containers.
-Each container is isolated from the others and each of them bundles their own software, libraries, and configuration files. Unlike virtual machines, containers share the services of a single operating system kernel. This reduces unnecessary overhead and makes them lightweight and portable.
-Docker containers can run on any computer running macOS, Windows, or Linux, either on-premises or in a public cloud environment, such as Scaleway Elements.
+Docker is a platform as a service (PaaS) tool that uses OS-level virtualization to deliver applications in packages called containers. Each container is isolated from the others and each of them bundles their own software, libraries, and configuration files. Unlike virtual machines, containers share the services of a single operating system kernel. This reduces unnecessary overhead and makes them lightweight and portable. Docker containers can run on any computer running macOS, Windows, or Linux, either on-premises or in a public cloud environment, such as Scaleway Elements.
 
-Using a Docker image for your AI project allows you to create and deploy an isolated environment for your project, which can be easily transferred between machines.
+All [Scaleway GPU Instances](https://www.scaleway.com/en/gpu-instances/) come with prebuilt AI Docker images which can be launched as soon as you connect to your Instance. Each image provides a different AI environment, based on Anaconda or Pipenv, depending on the GPU OS image. When you launch one of these images, you are in your chosen environment within seconds with all your favourite python packages already installed. Using Docker for your AI projects in this way allows you to ensure that your working environments are both **isolated** and **portable**, since they are in containers which can be easily transferred between machines.
 
-All [Scaleway GPU Instances](https://www.scaleway.com/en/gpu-instances/) come with prebuilt AI Docker images, using an environment based on Anaconda or Pipenv (depending on the GPU OS image).
-
-As mentioned earlier, Docker images are portable and you can also run images provided by other sources and use them with the GPU (for instance Docker images from Nvidia, Google, etc.). You could also choose to build your own Docker images.
+You can also run Docker images provided by other sources and use them with your GPU Instance - for instance, you might want to use Docker images provided by Nvidia, Google, etc. Alternatively, you could also choose to build your own Docker images.
 
 <Message type="requirement">
 
@@ -30,15 +26,16 @@ As mentioned earlier, Docker images are portable and you can also run images pro
 
 ## How to get started on a GPU Instance with Docker
 
-1. [Connect](/compute/instances/how-to/connect-to-instance/) to your Instance via SSH.
+1. [Connect](/compute/instances/how-to/connect-to-instance/) to your GPU Instance via SSH.
 
 2. Choose a Docker image from the containers shipped with your GPU Instance. See our [reference content](/compute/gpu/reference-content/docker-images/) for more information about the available Docker images, including the specific commands to run each of them.
 
-3. Use the following command to pull/run the Docker container:
+3. Use the following command to pull/run the Docker container. Remember to replace `[OPTIONS]` with any relevant options parameters, and `<IMAGE_NAME:TAG>` with the image name and tag of your chosen image, as shown in the reference content linked above:
 
   ```
   docker run --rm -it [OPTIONS] <IMAGE_NAME:TAG> [COMMAND]
   ```
+
   <Message type="tip">
 
   If you created your GPU Instance with the Ubuntu Focal GPU OS11 Operating System image, refer to the [pipenv documentation](/compute/gpu/how-to/use-pipenv/) for how to use the pipenv virtual environment inside the container.
