feat(gpu): overhaul of gpu doc

--- a/compute/gpu/concepts.mdx
+++ b/compute/gpu/concepts.mdx
@@ -53,6 +53,6 @@ Pipenv is a package and dependency manager for Python projects. It harnesses the
  - `Virtualenv` for creating different virtual Python environments
  - `Pipfile` for managing project dependencies
 
-Pipenv is pre-installed on all of Scaleway's AI Docker images for GPU Instances, making it easy to [create your own virtual environments](/compute/gpu/how-to/use-pipenv/). Pipenv replaces Anaconda for this purpose.
+Pipenv is pre-installed on all of Scaleway's AI Docker images for GPU Instances, making it easy to [use virtual environments](/compute/gpu/how-to/use-pipenv/). Pipenv replaces Anaconda for this purpose.
 
 </Concept>
