--- a/compute/gpu/how-to/use-pipenv.mdx
+++ b/compute/gpu/how-to/use-pipenv.mdx
@@ -6,8 +6,8 @@ content:
   h1: How to use pipenv to create virtual environments
   paragraph: This page explains how to use pipenv to create virtual environments with your GPU Instane
 dates:
-  validation: 2021-12-14
-  posted: 2021-12-14
+  validation: 2022-03-25
+  posted: 2022-03-25
 ---
   
 Pipenv is a package and dependency manager for Python projects. It harnesses the power of different existing tools, bringing their functionalities together: 
@@ -16,59 +16,27 @@ Pipenv is a package and dependency manager for Python projects. It harnesses the
   - **Virtualenv** for creating different virtual Python environments
   - **Pipfile** for managing project dependencies
 
-Pipenv is pre-installed on all of Scaleway's AI Docker images for GPU Instances. You can use pipenv to create your own virtual environments, if you wish to go beyond the pre-installed python environments already provided with the various Docker images..
-
-Regardless of your Docker image, you will be able to use Pipenv to install new packages and manage their versions across multiple different virtual environments if necessary.
+Pipenv is pre-installed on all of Scaleway's AI Docker images for GPU Instances. Launching one of these Docker images puts you in an activated pipenv virtual environment, with all your favourite packages and tools pre-installed. You can also use pipenv to create your own virtual environments, if you wish to go beyond the pre-installed python environments already provided with the various Docker images.
 
 <Message type="requirement">
 
 - You have an account and are logged into the [Scaleway Console](https://console.scaleway.com) 
 - You have created a [GPU Instance](/compute/gpu/how-to/create-manage-gpu-instance)
 - You have [generated your SSH key](/console/my-project/how-to/create-ssh-key/)
-- You have [launched a Scaleway Docker image on your GPU Instance](/compute/gpu/how-to/use-gpu-with-docker)
 
 </Message>
 
-## Creating your own pipenv virtual environments
+## Accessing the pipenv virtual environment
 
-1. Ensure you have [connected to your GPU Instance via SSH](/compute/instances/how-to/connect-to-instance) and then [launched a Scaleway AI Docker container](/compute/gpu/how-to/use-gpu-with-docker). 
+See our [dedicated documentation](/compute/gpu/how-to/use-preinstalled-env#working-with-the-pre-installed-environment-on-ubuntu-focal-gpu-os11) on how to access the pipenv virtual environment from your Scaleway GPU Instance.
 
-  You are now in the `ai` directory of the Docker container. Your command prompt should be similar to `root@11a1f374ecd7:/ai#`
-
-2. Navigate to the home directory.
-
-  `cd ~`
-
-3. Create a new project file for your new virtual environment, and navigate into it. Replace `my-proj` with the desired name for your project.
-
-  `mkdir my-proj && cd my-proj`
-
-  <Message type="tip">
-
-  To avoid losing your virtual environment upon exiting the container, make sure you create this folder in a directory that is [mapped to one of your GPU Instance's local volumes](/compute/gpu/how-to/use-gpu-with-docker#how-to-map-local-volumes)
-
-  </Message>
-
-4. Create a new virtual environment and generate a Pipfile:
-
-  `pipenv install`
-
-5. Activate the virtual environment:
-
-  `pipenv shell`
-
-  Your command prompt should now be similar to `(my-proj-lJJ58f3E) root@0c5c7d3dda00:/my-proj#`, showing that you are in the activated `my-proj` pipenv virtual environment.
-  
-
-### Managing packages
+## Managing packages with pipenv
 
 You can view packages, install/uninstall packages and update packages with a few simple `pipenv` commands:
 
 1. Enter the following command to see all the packages and dependencies installed in this environment, and their versions:
 
   `pipenv graph`
-
-  At first, your newly-created environment will have nothing in it. You will need to install some packages.
 
 2. Enter the following command to install a new package:
 
@@ -94,11 +62,17 @@ You can view packages, install/uninstall packages and update packages with a few
   
   </Message>
 
-### Understanding Pipfile
+  <Message type="important">
+
+  Be aware that installing and updating packages may provoke conflicts with the existing virtual environment installation.
+
+  </Message>
+
+## Understanding Pipfile
 
 Every pipenv virtual environment has its own Pipfile. The Pipfile details the dependencies of the project, taking the place of the typical `requirements.txt` file. When you create a Pipenv environment, a Pipfile is automatically generated.
 
-1. From the directory you created for your pipenv environment, type `ls` to list all files in this directory
+1. From within the Docker container, in the `ai` directory, type `ls` to list all files in this directory
 
   The output should be similar to the following:
 
@@ -119,38 +93,35 @@ Every pipenv virtual environment has its own Pipfile. The Pipfile details the de
 
   This file specifies which specific versions of the packages in the Pipfile should be used. This prevents packages which depend on each other being automatically upgraded, which could break your project dependency tree.
 
-  You can lock your currently installed packages with the `pipenv lock` command. This  generates the lock file for you automatically, based on your currently installed versions.
+## Creating your own virtual environments
 
-## Exiting the pipenv virtual environment and the container
+1. Ensure you have [connected to your GPU Instance via SSH](/compute/instances/how-to/connect-to-instance) and then [launched a Scaleway AI Docker container](/compute/gpu/how-to/use-gpu-with-docker). 
 
-When you are in an activated virtual environment, your command line prompt will normally be prefixed by the name of the environment. Here, for example, from `(my-proj-lJJ58f3E)` we see that we are in the activated `my-proj` environment, and from `/my-proj#` that we are in the `\my-proj` directory of our container:
+  You are now in the `ai` directory of the Docker container, with the virtual environment activated.
 
-`(my-proj-lJJ58f3E) root@0c5c7d3dda00:/my-proj# `
+2. Type `exit` to exit the virtual environment.
 
-1. Type the following command to leave/deactivate the virtual environment:
+3. Type `cd ~` to go levae the `ai` directory and go to the home directory.
 
-  `exit`
+4. Create a new project directory for your new virtual environment, and navigate into it. Replace `my-proj` with the desired name for your project.
 
-  Your prompt should now look similar to the following. You are still in the `my-proj` directory, but the environment is not activated:
+  `mkdir my-proj && cd my-proj`
 
-  `root@0c5c7d3dda00:/my-proj#`
+  <Message type="tip">
 
-2. Type the following command to return to the home directory of the container:
+  To avoid losing your virtual environment upon exiting the container, make sure you create this folder in a directory that is [mapped to one of your GPU Instance's local volumes](/compute/gpu/how-to/use-gpu-with-docker#how-to-map-local-volumes)
 
+  </Message>
 
-  ``
-  cd ..
-  ```
+5. Create a new virtual environment and generate a Pipfile:
 
-  From here, you can either continue to work in the pre-installed python environment that was preinstalled with the Docker image.
+  `pipenv install`
 
-3. Type the following command to exit the Docker container:
+6. Activate the virtual environment:
 
-  `exit`
+  `pipenv shell`
 
-  Your prompt should now look similar to the following. You are still connected to your GPU Instance, but you have left the Docker container:
-
-  `root@scw-name-of-instance:~#`
+  Your command prompt should now be similar to `(my-proj) jovyan@442a38468c20:~/my-proj`, showing that you are in the activated `my-proj` pipenv virtual environment.
 
 ## Further help
 
