--- a/compute/gpu/reference-content/docker-images.mdx
+++ b/compute/gpu/reference-content/docker-images.mdx
@@ -42,7 +42,7 @@ docker run --runtime=nvidia -it --rm -p 8888:8888 -p 6006:6006 rg.fr-par.scw.clo
 
 The main libraries included in the Tensorflow image are: Tensorflow 2.x, Tensorboard, Autokeras, Numpy, Scikit-Learn, Scipy, Pandas, Matplotlib, Optuna, Pillow, Plotly, ONNX, Spacy, HuggingFace Transformers and HuggingFace-Hub, JupyterLab and jupyterlab-nvdashboard.
 
- #### Pytorch
+ ## Pytorch
 
 ```sh
 docker run --runtime=nvidia -it --rm -p 8888:8888 -p 6006:6006 rg.fr-par.scw.cloud/scw-ai/pytorch:latest /bin/bash
@@ -51,15 +51,15 @@ docker run --runtime=nvidia -it --rm -p 8888:8888 -p 6006:6006 rg.fr-par.scw.clo
 The main libraries included  in the Pytorch image are: Pytorch, Tensorboard, Numpy, Scikit-Learn, Scipy, Pandas, Matplotlib, Optuna, Pillow, Plotly, ONNX, Spacy, HuggingFace Transformers and HuggingFace-Hub, JupyterLab and jupyterlab-nvdashboard.
 
 
- #### Jax
+ ## Jax
 
 ```sh
 docker run --runtime=nvidia -it --rm -p 8888:8888 -p 6006:6006 rg.fr-par.scw.cloud/scw-ai/jax:latest /bin/bash
 ```
 
- #### RAPIDS
+ ## RAPIDS
 
-Note: This image is build on top of the official RAPIDS docker image
+Note: This image is built on top of the official RAPIDS docker image
 
 ```sh
 docker run --runtime=nvidia -it --rm -p 8888:8888 -p 6006:6006 rg.fr-par.scw.cloud/scw-ai/rapids:latest /bin/bash
@@ -68,7 +68,7 @@ docker run --runtime=nvidia -it --rm -p 8888:8888 -p 6006:6006 rg.fr-par.scw.clo
 
 The main libraries included in the RAPIDS image are: blazingsql, bokeh, cudf, cugraph, cuml, cupy, cusignal, cuspatial, custreamz, cuxfilter, dask, Numpy, Scikit-Learn, Scipy, Pandas, Matplotlib, Pillow, Plotly, ONNX, Spacy, JupyterLab and jupyterlab-nvdashboard.
 
-#### "All" (Experimental)
+## "All" (Experimental)
 
 If there are no dependency issues when buidling the image, the **all** image will try to include all the above listed libraries into a single Docker image (except RAPIDS)
 
